--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm i
       - name: Build dist
-        run: npm build
+        run: npm run build
       - name: Send static dist folder
         uses: appleboy/scp-action@master
         with:
